# minimarkdown

./: .gitignore  AGENTS.md  CLAUDE.md  Markdown语法测试文档.md  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  start-dev.command  vite.config.ts  测试清单.html  测试清单.md  编辑器升级开发计划.md
.github/: RELEASE.md
.github/workflows/: release.yml
legacy-prototype/: README.md  app.js  index.html  styles.css
scripts/: set-release-version.mjs  write-release-config.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: app-error-boundary.tsx  document-search.tsx  icons.tsx  markdown-editor.tsx  markdown-toolbar.tsx
src/components/ui/: button.tsx
src/lib/: editor-compartments.ts  editor-highlight.ts  editor-search.ts  i18n.ts  live-preview.ts  markdown.ts
src/services/: document-repository.ts  theme-service.ts  update-service.ts
src/types/: document.ts
