[package]
name = "minimarkdown"
version = "0.1.1"
description = "A local-first Markdown writing app"
authors = ["MiniMarkdown"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "minimarkdown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2.10.0"
